Small changes in naming

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         <p></p>
         <div class="lower">
 	        <a class="keep-playing-button">Продолжай играть</a>
-          <a class="retry-button">Заново</a>
+          <a class="retry-button">ЗАНОВО</a>
         </div>
       </div>
 
